--- a/WebApiDemo/WebApiDemo.csproj
+++ b/WebApiDemo/WebApiDemo.csproj
@@ -16,5 +16,9 @@
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql.Design" Version="1.1.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Repository\Repository.csproj" />
+  </ItemGroup>
+
 
 </Project>
